--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ace-builds": "^1.5.1",
+    "clsx": "^1.1.1",
     "react": "^18.1.0",
+    "react-ace": "^10.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.2.0",
+    "react-json-to-csv": "^1.0.4",
     "react-scripts": "5.0.1",
+    "react-table": "^7.8.0",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
